fix(TreeView): update caret alignment partially addresses #11858

--- a/packages/styles/scss/components/treeview/_treeview.scss
+++ b/packages/styles/scss/components/treeview/_treeview.scss
@@ -73,6 +73,9 @@
     min-height: rem(32px);
     flex: 1;
     align-items: center;
+    // (min-height 32px - single line text height 18px) / 2 = 7px
+    padding-top: rem(7px);
+    padding-bottom: rem(7px);
 
     &:hover {
       background-color: $layer-hover-01;
@@ -109,7 +112,11 @@
   }
 
   .#{$prefix}--tree-parent-node__toggle {
-    padding: 0;
+    display: flex;
+    align-items: center;
+    align-self: flex-start;
+    // increase 16px container height to 18px to match text bounding box
+    padding: rem(1px) 0;
     border: 0;
     margin-right: $spacing-03;
 
